# CW_6

./: pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: sendm.py  start_mail.py
mailing/migrations/: 0001_initial.py  0002_client_owner_message_owner.py  0003_mailing.py  0004_alter_mailing_options.py  0005_log.py  0006_alter_mailing_options.py
mailing/templates/mailing/: base.html  card_template.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: act_su.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html  password_reset.html
users/templates/users/: user_detail.html  user_form.html  user_list.html
